# Aetherium

./: CMakeLists.txt  FILE_INDEX.md  README.md  main.cpp
client/: CMakeLists.txt  main.cpp
client/android/: AndroidManifest.xml
client/platform/: platform.cpp  platform.h
client/platform/android/: android_platform.cpp  android_platform.h
client/platform/linux/: linux_platform.cpp
client/platform/windows/: windows_platform.h
docs/: VoxelSpaceGame_Design_Complete.md
engine/: CMakeLists.txt  engine.cpp
protocol/: Packets.h
server/: CMakeLists.txt  galaxyGenerator.js  generate.js  index.html  main.cpp
shared/: CMakeLists.txt  shared.cpp  shared.h
shared/protocol/: Serialize.h
sim/: OrbitalMath.h
